--- a/src/Components/HeaderMain/headermain.css
+++ b/src/Components/HeaderMain/headermain.css
@@ -8,8 +8,44 @@ header{
 }
 
 header .logo{
-    color:orangered;
+    
     position: relative;
-    left: -200px;
     font-size: 0.6em;
+    
+}
+.text-logo{
+    text-decoration: none;
+}
+
+header .logo h1{
+    color: white;
+    color:orangered;
+   text-decoration: none;
+    
+}
+header .serch-headerMain {
+    display: flex;
+
+    width:200px;
+}
+
+header .serch-headerMain input{
+    cursor: pointer;
+    outline: none;
+    border: none;
+    border-radius: 8px;
+    padding-left: 3px;
+}
+
+header .serch-headerMain img{
+    cursor: pointer;
+    margin-left: 8px;
+    width: 20px;
+}
+
+header .btn-header-main img{
+    width: 20px;
+    position: relative;
+    left: 50px;
+    top: 5px;
 }
